lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/Lightning_Reporter_Note_Metadata__c.object-meta.xml
<CustomObject>
    <description>Lightning Reporter-created Notes detail</description>
    <label>Lightning Reporter Note Metadata</label>
    <nameField>
        <displayFormat>LRNM-{0000000}</displayFormat>
        <label>Note Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning Reporter Note Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>