lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Mentioned_User__c.field-meta.xml
<CustomField>
    <fullName>Mentioned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A user who was mentioned in a Lex Reporter Note</inlineHelpText>
    <label>Mentioned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lightning_Reporter_Note_Metadata1</relationshipName>
    <type>Lookup</type>
</CustomField>