lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Note_Id__c.field-meta.xml
<CustomField>
    <fullName>Note_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Note Id to which this metadata record maps</inlineHelpText>
    <label>Note Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>