lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Note_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Note_Parent_Id__c</fullName>
    <inlineHelpText>The Parent Id of the related Note</inlineHelpText>
    <label>Note Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>