lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Reporter_Context_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Context_Record_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The Id of the record from which the Note was inserted (i.e. if a note is inserted in a Contact list view from an Account record, will equal the Account Id)</inlineHelpText>
    <label>Note Reporter Context Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>