lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>3 mentions in a message will result in the creation of 3 metadata records with type of &quot;Mention&quot;
3 unique views in a message will result in the creation of 3 metadata records with type of &quot;View&quot;</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mention</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>