lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Note Id + Viewed By Id</inlineHelpText>
    <label>Unique Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>