lex-reporter/force-app/main/default/objects/Lightning_Reporter_Note_Metadata__c/fields/Viewed_By__c.field-meta.xml
<CustomField>
    <fullName>Viewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Tracks who viewed a Note in the Lightning Reporter component</inlineHelpText>
    <label>Viewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lightning_Reporter_Note_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>